RESOLVED FIXED63986
Date.prototype.toISOString doesn't handle negative years or years > 9999 correctly.
https://bugs.webkit.org/show_bug.cgi?id=63986
Summary Date.prototype.toISOString doesn't handle negative years or years > 9999 corr...
Lasse Reichstein Holst Nielsen
Reported 2011-07-06 05:19:31 PDT
The ES5.1 specification of Date.prototype.toISOString requires the result to be in the format of a Date Time String, which allows an extension of the four-digit ISO year for years outside 0000..9999. I.e., for negative years or years > 9999, the only valid formats are "+yyyyyy" or "-yyyyyy". The current version outputs dates on the form "10000-01-01T01:01:01.000Z".
Attachments
Patch (6.14 KB, patch)
2011-07-22 09:42 PDT, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2011-07-22 09:42:25 PDT
Geoffrey Garen
Comment 2 2011-07-22 10:48:39 PDT
Comment on attachment 101738 [details] Patch r=me
WebKit Review Bot
Comment 3 2011-07-22 11:01:04 PDT
Comment on attachment 101738 [details] Patch Clearing flags on attachment: 101738 Committed r91576: <http://trac.webkit.org/changeset/91576>
WebKit Review Bot
Comment 4 2011-07-22 11:01:08 PDT
All reviewed patches have been landed. Closing bug.
Gavin Barraclough
Comment 5 2012-01-05 20:51:38 PST
*** Bug 69231 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.